# fsEye

./: .gitignore  CMakeLists.txt  README.md  languages_abbreviations.txt  main.cpp
data/: _info.txt.txt  text1.txt  text2.txt
include/: indexing.h  localization.h  text_processing.h  tokenize.h
include/stemming/: _info.txt  allstems.h
include/text_processing/: tokenizer.h
source/: indexator.cpp  main.cpp
source/headers/: FVector.h  FVectorMaker.h  fsWindow.h  multithread_primitives.h
